syntax = "proto3";
option java_multiple_files = true;
package reservation;

message CreateReservationRequest
{
  int32 customerId = 1;
  int32 foodOfferId = 2;
}

message DeleteReservationRequest
{
  int32 foodOfferId = 1;
}

message ReadCustomerReservationsRequest
{
  int32 customerId = 1;
}

message ReadFoodSellerReservationsRequest
{
  int32 foodSellerId = 1;
}

message ReservationEmptyResponse {}

message ReadReservationsListResponse
{
  string list = 1;
}

service ReservationService
{
  rpc createReservation(CreateReservationRequest) returns (ReservationEmptyResponse);
  rpc deleteReservation(DeleteReservationRequest) returns (ReservationEmptyResponse);
  rpc readCustomerReservations(ReadCustomerReservationsRequest) returns (ReadReservationsListResponse);
  rpc readFoodSellerReservations(ReadFoodSellerReservationsRequest) returns(ReadReservationsListResponse);
}